Fix Japanese message formatting in issue-comment.yml

--- a/.github/workflows/issue-comment.yml
+++ b/.github/workflows/issue-comment.yml
@@ -19,10 +19,10 @@ jobs:
               body: [
                 "issueありがとうございました。",
                 "",
-                "そしてLinuxの学習お疲れ様でした！",
+                "そしてLinuxの学習お疲れ様でした。",
                 "",
-                "今後も引き続き学習していき、Linuxを使いこなせる人を目指してください。",
+                "今後も引き続き学習していき、Linuxを使いこなせる人を目指してください。応援しています！",
                 "",
-                "応援しています！（レポートの提出や単位認定試験の勉強もお忘れなく！）"
+                "（レポートの提出や単位認定試験の勉強もお忘れなく！）"
               ].join("\n")
             })
