--- a/.github/workflows/issue-comment.yml
+++ b/.github/workflows/issue-comment.yml
@@ -1,5 +1,3 @@
-name: issueに応答します
-
 on:
   issues:
     types: [opened]
@@ -27,7 +25,7 @@ jobs:
                 "### 問題②の答え",
                 "- `*/3 2 9 5 * /usr/local/bin/sample.sh`",
                 "",
-                "正解できましたでしょうか？"
+                "正解できましたでしょうか？",
                 "",
                 "そして、Linuxの学習お疲れ様でした。",
                 "",
